poke/testsuite/poke.pkl/printf-diag-14.pk
/* { dg-do compile} */

printf "foo%x", 12; /* { dg-error "invalid format specifier" } */
